# clases

bibliotecas-gui/qt5/: CMakeLists.txt  readme.md
bibliotecas-gui/qt5/doc/: slider.html  slides.md
bibliotecas-gui/qt5/ej3/: CMakeLists.txt
bibliotecas-gui/qt5/ej4/: CMakeLists.txt  main.cpp
bibliotecas-gui/qt5/ej4/src/: mainwindow.ui
bibliotecas-gui/qt5/sdl-qt/: CMakeLists.txt
bibliotecas-gui/qt5/sdl-qt/src/: Gameloop.cpp  mainQtSDL.cpp
bibliotecas-gui/sdl/: CMakeLists.txt
bibliotecas-gui/sdl/libs/: Animation.cpp  Animation.h  SdlTexture.cpp  SdlTexture.h
bibliotecas-gui/sdl/src/: mainSdlAlphaBlending.cpp  mainSdlEvents.cpp  mainSdlHello.cpp
bibliotecas-gui/sdlpp/: CMakeLists.txt
bibliotecas-gui/sdlpp/libs/libSDL2pp/: CMakeLists.txt
bibliotecas-gui/sdlpp/src/: DynamicStencil.cpp  DynamicStencil.h  SdlException.cpp  SdlException.h  mainAlphaBlending.cpp  mainSDLFigures.cpp  mainSdlEvents.cpp  mainSdlHello.cpp
cpp-misc/: slides.md
cpp-misc/src/iterators/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp
extra/cmake/demo/: CMakeLists.txt
extra/cmake/demo/ej0/: CMakeLists.txt  main.cpp
extra/cmake/demo/ej1/: CMakeLists.txt  main.cpp
extra/cmake/demo/ej1/lib/: CMakeLists.txt  foo.cpp  foo.h
extra/cmake/demo/ej2/: CMakeLists.txt  main.cpp
extra/lua/: CMakeLists.txt  README.md  template.c
extra/lua/00-hello/: CMakeLists.txt  hello.c
extra/lua/01-tables/: tables.lua
extra/lua/02-functions/: functions.lua
extra/lua/03-stack/: CMakeLists.txt  armory.c  armory.lua
extra/lua/04-call-lua-functions/: CMakeLists.txt  armory.c  damage_calculator.lua
extra/python/ctypes/: README.md
extra/python/ctypes/simple-grep/: README.md
extra/python/ctypes/simple-grep/src/: CMakeLists.txt  main.c  simple_grep.c  simple_grep.h
extra/python/ctypes/simple-grep/src/python/: grep_wrap.py  simple_grep.py  simple_grep_opt.py
libuv/: README.md
libuv/src/: 00-hello-world.cpp  CMakeLists.txt
libuv/src/01-echo-server/: CMakeLists.txt  loop.cpp  loop.h  main.cpp
poe/: poe.tex
polimorfismo/: polimorfismo.tex
sockets-matias/src/: 02-getaddrinfo.c  03-send-recv.c
sockets-mdipaola/src/: buscar_nota_fiuba.c  echoserver.c
